--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -1,11 +1,15 @@
 #commonSettingsName {
     /* border: 1px solid black; */
-    padding-left: 1em;
-    padding-right: 1em;
+    /* padding-left: 1em; /* 16px */
+    /* padding-right: 1em; */
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
     width: max-content;
-    font-size: 2em;
+    /* font-size: 2em; /* 32px */
+    font-size: 3.2em;
     text-decoration: underline;
-    margin-top: 1em;
+    /* margin-top: 1em; /* 16px */
+    margin-top: 1.6rem;
     font-weight: 700;
     color: var(--text-color);
 
@@ -26,9 +30,11 @@
     font-style: oblique;
     font-weight: bolder;
     font-family: var(--font-family);
-    margin-bottom: 0.55em;
+    /* margin-bottom: 0.55em; /* 8.8px */
+    margin-bottom: 0.88rem;
     text-align: justify;
-    text-indent: 2em;
+    /* text-indent: 2em; /* 32px */
+    text-indent: 3.2rem;
     color: var(--text-color);
 }
 
@@ -36,7 +42,8 @@
     /* outline: 3px dotted purple; */
     display: flex;
     justify-content: center;
-    gap: 3.5em;
+    /* gap: 3.5em; /* 56px */
+    gap: 5.6rem;
 }
 
 .photo_container {
@@ -65,7 +72,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 4em;
+    /* gap: 4em; /* 64px */
+    gap: 6.4rem;
     /* outline: 3px double blue; */
 }
 
