--- a/cafeversity/src/app/[authorizedUser]/authorized.module.css
+++ b/cafeversity/src/app/[authorizedUser]/authorized.module.css
@@ -25,8 +25,8 @@
     margin-left: 50px;
     margin-right: 10px;
     padding: 5px 10px;
-    /* font-size: 48px; */
-    font-size: 3em;
+    /* font-size: 3em; /* 48px */
+    font-size: 4.8rem;
     padding: 25px 100px 25px 25px;
 
     font-family: var(--font-family);
