--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -54,7 +54,8 @@
 .inputLabel {
     position: absolute;
     top: 50%;
-    left: 0.3125rem;
+    /* left: 0.3125rem; /* 5px when default value is 16px */
+    left: 0.5rem;
     display: flex;
 
     transform: translateY(-50%);
@@ -68,8 +69,10 @@
     border-radius: 5px;
     background-color: #fff;
     color: #714efe;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    /* padding-left: 0.5rem; /* 8px */
+    /* padding-right: 0.5rem; /* 8px */
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
     transition: top 0.1s ease-in-out, scale 0.1s ease-in-out;
     top: 0;
     transform: translateY(-50%) scale(0.75);
@@ -133,45 +136,3 @@
 .btn_name {
     position: absolute;
 }
-
-
-/* #dialog {
-    background-color: rgba(255, 255, 255, 0.8);
-    height: 100vh;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    z-index: 10;
-}
-.accessView,
-.denyView {
-    border-radius: 2vh;
-    width: 25%;
-    height: 25vh;
-    margin: auto;
-    background-color: rgb(231, 231, 231);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#dialog_question {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 600;
-    padding: 0 6%;
-    margin: 0;
-    margin-bottom: 3vh;
-    text-shadow: revert;
-    text-decoration-style: solid;
-}
-#dialog_buttons {
-    border: 2px solid black;
-    margin-top: 3vh;
-    display: flex;
-    width: 80%;
-    justify-content: space-between;
-} */
