--- a/cafeversity/src/components/FontsSettings/FontsSetUps.module.css
+++ b/cafeversity/src/components/FontsSettings/FontsSetUps.module.css
@@ -6,7 +6,8 @@
 }
 
 #describe_name {
-    font-size: 1.375em;
+    /* font-size: 1.375em; /* 22px */
+    font-size: 2.2rem;
     font-weight: 400;
     padding-top: 0;
     padding-left: 10px;
