--- a/cafeversity/src/components/OtherParts/SubTitle/SubTitle.module.css
+++ b/cafeversity/src/components/OtherParts/SubTitle/SubTitle.module.css
@@ -1,5 +1,6 @@
 .settingsSubTitle {
-    font-size: 1.5em;
+    /* font-size: 1.5em; /* 24px */
+    font-size: 2.4rem;
     font-weight: 700;
     font-family: var(--font-family);
     padding-left: 10px;
