--- a/cafeversity/src/components/RadiosChoice/Radios.module.css
+++ b/cafeversity/src/components/RadiosChoice/Radios.module.css
@@ -6,7 +6,8 @@
 }
 
 #describe_radios_name {
-    font-size: 1.375em;
+    /* font-size: 1.375em; /* 22px */
+    font-size: 2.2rem;
     font-weight: 400;
     padding-left: 10px;
     padding-right: 10px;
@@ -24,23 +25,31 @@
 
 .radio {
     appearance: none;
-    height: 3em;
+    /* height: 3em; /* 48px */
+    height: 4.8rem;
     aspect-ratio: 1/1;
-    margin-left: 1em;
-    margin-right: 1em;
+    /* margin-left: 1em; /* 16px */
+    /* margin-right: 1em; /* 16px */
+    margin-left: 1.6rem;
+    margin-right: 1.6rem;
     border-radius: 50%;
     position: relative;
-    margin-top: 0.375em;
-    margin-bottom: 0.375em;
+    /* margin-top: 0.375em; /* 6px */
+    /* margin-bottom: 0.375em; /* 6px */
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
 }
 .radio:first-child {
-    margin-right: 1em;
+    /* margin-right: 1em; /* 16px */
+    margin-left: 1.6rem;
 }
 .radio:last-child {
-    margin-left: 1em;
+    /* margin-left: 1em; /* 16px */
+    margin-right: 1.6rem;
 }
 .radio:checked::before {
-    height: 1.375em;
+    /* height: 1.375em; /* 22px */
+    height: 2.2rem;
     aspect-ratio: 1/1;
     position: absolute;
     background-color: white;
