--- a/cafeversity/src/components/StickySettingsNavBar/StickyNavBar.module.css
+++ b/cafeversity/src/components/StickySettingsNavBar/StickyNavBar.module.css
@@ -9,18 +9,21 @@
 }
 #sticky_navbar_name {
     font-family: var(--font-family);
-    font-size: 2em;
+    /* font-size: 2em; /* 32px */
+    font-size: 3.2em;
     margin-top: 0;
     padding-top: 30px;
     color: var(--text-color);
 }
 #sticky_navbar hr {
     background-color: var(--text-color);
-    height: 0.1875em;
+    /* height: 0.1875em; /* 3px */
+    height: 0.3rem;
 }
 #sticky_navbar_links {
     /* border: 3px solid black; */
     display: flex;
     font-family: var(--font-family);
-    font-size: 1.5em;
+    /* font-size: 1.5em; /* 24px */
+    font-size: 2.4rem;
 }
