--- a/cafeversity/src/components/TastesSettings/CaloriesRange/RangeOfCalories.module.css
+++ b/cafeversity/src/components/TastesSettings/CaloriesRange/RangeOfCalories.module.css
@@ -1,7 +1,9 @@
 .twohandRangeContainer {
     /* outline: 1px solid black; */
-    height: 5em;
-    width: 30em;
+    /* height: 5em; /* 80px */
+    /* width: 30em; /* 480px */
+    height: 8rem;
+    width: 48rem;
     position: relative;
 }
 
@@ -12,60 +14,76 @@
     position: absolute;
     margin: auto;
     top: 0;
-    bottom: -3em;
+    /* bottom: -3em; /* -48px */
+    bottom: -4.8rem;
     background-color: transparent;
     pointer-events: none;
 }
 
 .twohandRangeTrack {
     width: 100%;
-    height: 0.3125em;
+    /* height: 0.3125em; /* 5px */
+    height: 0.5rem;
     background-color: rgb(72, 130, 255);
     position: absolute;
     margin: auto;
     top: 0;
-    bottom: -3em;
-    border-radius: 0.3125em;
+    /* bottom: -3em; /* -48px */
+    /* border-radius: 0.3125em; /* 5px */
+    bottom: -4.8rem;
+    border-radius: 0.5rem;
 }
 
 .twohandRangeContainer > input[type="range"]::-webkit-slider-runnable-track {
     appearance: none;
-    height: 0.4375em;
+    /* height: 0.4375em; /* 7px */
+    height: 0.7rem;
 }
 .twohandRangeContainer > input[type="range"]::-webkit-slider-thumb {
     appearance: none;
-    height: 2em;
-    width: 2em;
+    /* height: 2em; /* 32px */
+    /* width: 2em; /* 32px */
+    height: 3.2rem;
+    width: 3.2rem;
     border-radius: 50%;
     background-color: gold;
-    border: 0.1875em solid grey;
+    /* border: 0.1875em solid grey; */
+    border: 0.3rem solid grey;
     cursor: pointer;
-    margin-top: -0.5em;
+    /* margin-top: -0.5em; /* -8px */
+    margin-top: -0.8rem;
     pointer-events: all;
 }
 .twohandRangeContainer > input[type="range"]:active::-webkit-slider-thumb {
     background-color: aliceblue;
-    border: 0.25em solid gold;
+    /* border: 0.25em solid gold; */
+    border: 0.4rem solid gold;
 }
 
 .twohandRangeContainer > input[type="range"]::-ms-track {
     appearance: none;
-    height: 0.4375em;
+    /* height: 0.4375em; /* 7px */
+    height: 0.7rem;
 }
 .twohandRangeContainer > input[type="range"]::-ms-thumb {
     appearance: none;
-    height: 2em;
-    width: 2em;
+    /* height: 2em; /* 32px */
+    /* width: 2em; /* 32px */
+    height: 3.2rem;
+    width: 3.2rem;
     border-radius: 50%;
     background-color: gold;
-    border: 0.1875em solid grey;
+    /* border: 0.1875em solid grey; */
+    border: 0.3rem solid grey;
     cursor: pointer;
-    margin-top: -0.5em;;
+    /* margin-top: -0.5em; /* -8px */
+    margin-top: -0.8rem;
     pointer-events: all;
 }
 .twohandRangeContainer > input[type="range"]:active::-ms-thumb {
     background-color: aliceblue;
-    border: 0.25em solid gold;
+    /* border: 0.25em solid gold; */
+    border: 0.4rem solid gold;
 }
 
 
@@ -75,32 +93,48 @@
     flex-wrap: nowrap;
     justify-content: center;
     /* gap: 0.75em; */
+    /* gap: 1.2rem; */
     align-items: center;
 }
 
 #downRange,
 #rangeDash,
 #upRange {
-    font-size: 1.5em;
+    /* font-size: 1.5em; /* 24px */
+    font-size: 2.4rem;
     font-weight: bolder;
-    padding-top: 0.1875em;
-    padding-bottom: 0.1875em;
+    /* padding-top: 0.1875em; /* 3px */
+    /* padding-bottom: 0.1875em; /* 3px */
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
     background-color: rgb(255, 238, 140);
-    border-top: 0.1em solid #d5d5d5;
-    border-bottom: 0.1em solid #d5d5d5;
+    /* border-top: 0.1em solid #d5d5d5; */
+    /* border-bottom: 0.1em solid #d5d5d5; */
+    border-top: 0.16rem solid #d5d5d5;
+    border-bottom: 0.16rem solid #d5d5d5;
     color: var(--background-color);
 }
 #downRange {
-    padding-right: 0.75em;
-    padding-left: 0.25em;
-    border-top-left-radius: 0.3em;
-    border-bottom-left-radius: 0.3em;
-    border-left: 0.1em solid #d5d5d5;
+    /* padding-right: 0.75em; /* 12px */
+    /* padding-left: 0.25em; /* 4px */
+    /* border-top-left-radius: 0.3em; /* 4.8px */
+    /* border-bottom-left-radius: 0.3em; /* 4.8px */
+    /* border-left: 0.1em solid #d5d5d5; */
+    padding-right: 1.2rem;
+    padding-left: 0.4rem;
+    border-top-left-radius: 0.48rem;
+    border-bottom-left-radius: 0.48rem;
+    border-left: 0.16rem solid #d5d5d5;
 }
 #upRange {
-    padding-left: 0.75em;
-    padding-right: 0.25em;
-    border-top-right-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
-    border-right: 0.1em solid #d5d5d5;
+    /* padding-left: 0.75em; /* 12px */
+    /* padding-right: 0.25em; /* 4px */
+    /* border-top-right-radius: 0.3em; /* 4.8px */
+    /* border-bottom-right-radius: 0.3em; /* 4.8px */
+    /* border-right: 0.1em solid #d5d5d5; */
+    padding-left: 1.2rem;
+    padding-right: 0.4rem;
+    border-top-right-radius: 0.48rem;
+    border-bottom-right-radius: 0.48rem;
+    border-right: 0.16rem solid #d5d5d5;
 }
