--- a/cafeversity/src/components/TastesSettings/Taste&BodyConst.module.css
+++ b/cafeversity/src/components/TastesSettings/Taste&BodyConst.module.css
@@ -1,6 +1,7 @@
 .tastyNbodyBlock {
     /* height: 70vh; */
-    padding: 1em;
+    /* padding: 1em; /* 16px */
+    padding: 1.6rem;
     scroll-margin-top: 205px;
 }
 
@@ -9,7 +10,8 @@
     padding-left: 10px;
     padding-right: 10px;
     width: max-content;
-    font-size: 2em;
+    /* font-size: 2em; /* 32px */
+    font-size: 3.2rem;
     text-decoration: underline;
     margin-top: 0;
     font-weight: 700;
