Since this time you can change font's volumes: bold, normal and italic.
Before merging I want to add a new table in the app's database with single-to-single connection.
Also I need to make some small changes at the main branch to avoid merging as rebasing.

--- a/cafeversity/src/app/[authorizedUser]/authorized.module.css
+++ b/cafeversity/src/app/[authorizedUser]/authorized.module.css
@@ -30,6 +30,9 @@
     padding: 25px 100px 25px 25px;
 
     font-family: var(--font-family);
+    
+    font-weight: var(--font-volume-weight);
+    font-style: var(--font-volume-style);
 }
 
 /* .exit_cover {
