--- a/cafeversity/src/components/OptionsChoice/CustomSelect.module.css
+++ b/cafeversity/src/components/OptionsChoice/CustomSelect.module.css
@@ -16,6 +16,8 @@
     color: var(--text-color);
 
     font-family: var(--font-family);
+
+    font-style: var(--font-volume-style);
 }
 
 .selectorBox {
@@ -27,6 +29,8 @@
     position: relative;
 
     font-family: var(--font-family);
+
+    font-style: var(--font-volume-style);
 }
 
 .selectedOption {
