--- a/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
+++ b/cafeversity/src/app/[authorizedUser]/settingsPage/settings.module.css
@@ -44,11 +44,21 @@
     color: var(--text-color);
 
     font-family: var(--font-family);
+
+    font-style: var(--font-volume-style);
 }
 .textInput:focus {
     border: 3px #714efe solid;
     outline: none;
     box-shadow: lightgray 0 0 5px 7px;
+}
+.textInput::placeholder,
+.textInput::-webkit-input-placeholder,
+.textInput::-moz-placeholder,
+.textInput::-ms-placeholder {
+    font-family: var(--font-family);
+    font-weight: var(--font-volume-weight);
+    font-style: var(--font-volume-style);
 }
 
 .inputLabel {
