--- a/cafeversity/src/components/RadiosChoice/Radios.module.css
+++ b/cafeversity/src/components/RadiosChoice/Radios.module.css
@@ -14,6 +14,8 @@
     color: var(--text-color);
 
     font-family: var(--font-family);
+
+    font-style: var(--font-volume-style);
 }
 
 .radios {
