Today's commit includes correction by one of the most important principle – Don't Repeat Yourself (DRY).
I found PageExterior.tsx and Taste&BodyConst.tsx as 100% similar. Also <p> tag with the same css properties set has been seen at many separate components.

Therefore, PageExterior and Taste&BodyConst have been replaced with the common PageBlockName component.
Tag <p> has been rewritten on Paragraph component, and ParagraphFor component has been removed.
I have added a new folder in "components" folder for common parts of each page: PageBlockName, Paragraph, Subtitle (HorizontalLine has abilities to be added to them later).

--- a/cafeversity/src/components/PageBlocks/PageBlockName.module.css
+++ b/cafeversity/src/components/PageBlocks/PageBlockName.module.css
@@ -1,4 +1,4 @@
-.appearanceBox {
+.pageBlock {
     /* height: 60vh; */
     border-radius: 1%/2%;
     /* padding: 1em; /* 16px */
@@ -6,7 +6,7 @@
     scroll-margin-top: 205px;
 }
 
-#appearanceBoxName {
+#pageBlockName {
     /* border: 1px solid black; */
     padding-left: 10px;
     padding-right: 10px;
