--- a/cafeversity/src/components/ImageEditor/imgEditor.module.css
+++ b/cafeversity/src/components/ImageEditor/imgEditor.module.css
@@ -1,32 +1,7 @@
-#commonSettingsName {
-    /* border: 1px solid black; */
-    /* padding-left: 1em; /* 16px */
-    /* padding-right: 1em; */
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
-    width: max-content;
-    /* font-size: 2em; /* 32px */
-    font-size: 3.2em;
-    text-decoration: underline;
-    /* margin-top: 1em; /* 16px */
-    margin-top: 1.6rem;
-    font-weight: 700;
-    color: var(--text-color);
-
-    font-family: var(--font-family);
-}
-
-.photo_editor {
-    max-width: 30%;
-    /* border: 2px solid black; */
-    margin-bottom: 20px;
-    scroll-margin-top: 302px;
-}
-
 .photo_edit_name {
     margin-bottom: 0;
     min-width: fit-content;
-    font-size: 22px;
+    font-size: 2.2rem;
     font-style: oblique;
     font-weight: bolder;
     font-family: var(--font-family);
@@ -47,6 +22,9 @@
     justify-content: center;
     /* gap: 3.5em; /* 56px */
     gap: 5.6rem;
+    max-width: 30%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .photo_container {
