--- a/cafeversity/src/components/PageBlocks/Paragraphs/Paragraph.module.css
+++ b/cafeversity/src/components/PageBlocks/Paragraphs/Paragraph.module.css
@@ -1,20 +1,18 @@
-.fontsSetUpBlocks {
+.paragraphBlock {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-#describe_name {
-    /* font-size: 1.375em; /* 22px */
-    font-size: 2.2rem;
+.paragraph {
+    font-size: 22px;
     font-weight: 400;
-    padding-top: 0;
+    padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
+
     color: var(--text-color);
-
     font-family: var(--font-family);
-
     font-style: var(--font-volume-style);
 }
