--- a/cafeversity/src/components/StickySettingsNavBar/StickyNavBar.module.css
+++ b/cafeversity/src/components/StickySettingsNavBar/StickyNavBar.module.css
@@ -13,7 +13,7 @@
 
     font-family: var(--font-family);
     /* font-size: 2em; /* 32px */
-    font-size: 3.2em;
+    font-size: 3.2rem;
     margin-top: 0;
     padding-top: 30px;
     color: var(--text-color);
