I have added soft reloading after setting up a language for website. Also I have found CustomSelect component can use cached values. Because of it, CustomSelect showed incorrect choice. Having set fetchData function in SettingsPageOnServer component on "no store cache", I have decided this problem too.

--- a/cafeversity/src/components/TastesSettings/CaloriesRange/RangeOfCalories.module.css
+++ b/cafeversity/src/components/TastesSettings/CaloriesRange/RangeOfCalories.module.css
@@ -112,7 +112,7 @@
     /* border-bottom: 0.1em solid #d5d5d5; */
     border-top: 0.16rem solid #d5d5d5;
     border-bottom: 0.16rem solid #d5d5d5;
-    color: var(--background-color);
+    color: black;
 }
 #downRange {
     /* padding-right: 0.75em; /* 12px */
