React-Toastify has added its message notifications for signing in and setting a language. Also: 1) I have rewritten CustomSelect's calculation for its above and below space. It depends on amount of languages in it. 2) CustomSelect shows the actual language and doesn't show it in laguages list after clicking on it. You could pay attention on two pictures at the previous GitHub commit. The app doesn't update user's photo correctly: it saves image's path into user's row in database, but shows the previous one. It will be repaired in the very near future.

--- a/cafeversity/src/components/OptionsChoice/CustomSelect.module.css
+++ b/cafeversity/src/components/OptionsChoice/CustomSelect.module.css
@@ -5,6 +5,8 @@
     border: 2px solid var(--text-color);
     padding: 5px;
     position: relative;
+    cursor: default;
+    user-select: none;
 
     font-family: var(--font-family);
 
