I have made the photo updation work correctly. Unfortunately, I couldn't understand why it was so hard to set it up. The only idea is based on misunderstanding how ImageEditor must process different data: string and null.
PS:
I think I wasn't a good idea to put null for each userPhoto field at Users database table.
It should be better to save into userPhoto default image's name.

--- a/cafeversity/src/components/FormFields/TextField.module.css
+++ b/cafeversity/src/components/FormFields/TextField.module.css
@@ -11,10 +11,10 @@
     column-count: auto;
     line-height: 1.5;
     margin-bottom: 15px;
+
     color: var(--text-color);
-
+    background-color: var(--background-color);
     font-family: var(--font-family);
-
     font-style: var(--font-volume-style);
 }
 .textInput:focus {
