"/(commonSite)/[locale]/commonMenu" and "/(commonSite)/[locale]/news/..." routes have got their own localization.
Also MainBottomButtons component has been stood as the fixed block in the bottom side of a screen.

--- a/cafeversity/src/app/(commonSite)/[locale]/page.module.css
+++ b/cafeversity/src/app/(commonSite)/[locale]/page.module.css
@@ -435,6 +435,10 @@ body {
 /* Buttons Part */
 .buttons {
   display: flex;
+  position: fixed;
+  bottom: 7px;
+  left: 5px;
+  right: 5px;
 }
 
 #food_today,
