--- a/cafeversity/src/app/(commonSite)/[locale]/page.module.css
+++ b/cafeversity/src/app/(commonSite)/[locale]/page.module.css
@@ -250,7 +250,7 @@ body {
   height: 100px;
   padding-left: 2%;
   padding-right: 2%;
-  border-bottom: 2px solid black;
+  margin-bottom: 2px;
   background: linear-gradient(to bottom, rgb(0, 153, 255) 0%, rgb(0, 204, 255) 50%, rgb(252, 242, 223) 100%);
   display: flex;
   justify-content: space-between;
@@ -262,9 +262,9 @@ body {
 #date {
   width: 170px;
   height: 50px;
-  border: 2px orange dashed;
   border-radius: 20px;
-  /* background-color: wheat; */
+  background-color: #ffffff2b;
+  backdrop-filter: blur(5px);
   margin: auto 0;
 }
 
@@ -288,8 +288,6 @@ body {
   width: 45px;
   height: 45px;
   overflow: hidden;
-  /* border: 1px solid black;
-  border-radius: 50%; */
   margin: auto 0;
   margin-right: 5px;
   animation: sun_rotating 15s linear infinite;
@@ -436,7 +434,7 @@ body {
 .buttons {
   display: flex;
   position: fixed;
-  bottom: 7px;
+  bottom: 0;
   left: 5px;
   right: 5px;
 }
