--- a/cafeversity/src/app/globals.css
+++ b/cafeversity/src/app/globals.css
@@ -152,6 +152,15 @@ a {
   --order-previous-list-row: #f0f0f0;
   --order-previous-list-row-items: white;
 
+  --menu-category-box-shadow: inset 0px 0px 10px -2px rgba(66, 68, 90, 1);
+  --menu-category-dish-info-icon: #e27b4c;
+
+  --short-info-background-color: #f2f2f2ff;
+  --short-info-horizontal-line-color: black;
+  --short-info-icon-color: black;
+
+  --full-info-dish-name: wheat;
+
   --success-color: #28a745;
   --warning-color: #ffc107;
   --error-color: #dc3545;
@@ -164,7 +173,7 @@ a {
   --background-color: rgb(73, 71, 66);
   --text-color: white;
 
-  --background-color-filter: rgba(4, 4, 4, 0.33);
+  --background-color-filter: rgba(36, 36, 36, 0.33);
 
   --background-color-sortable-area: rgb(160, 145, 127);
   --background-color-sortable: #00000080;
@@ -187,6 +196,15 @@ a {
   --order-tab-hovered: #5f5f5f;
   --order-previous-list-row: #4a5568;
   --order-previous-list-row-items: #4a5568;
+
+  --menu-category-box-shadow: inset 0px 0px 10px -2px rgba(189, 187, 165, 1);
+  --menu-category-dish-info-icon: #4cc9e2;
+
+  --short-info-background-color: #2f2f2fff;
+  --short-info-horizontal-line-color: white;
+  --short-info-icon-color: white;
+
+  --full-info-dish-name: #FFEFD5;
 
   --success-color: #2ecc71;
   --warning-color: #f39c12;
